chore(checkpoint): snapshot current backend state before docs reconciliation